# pqrs

./: .gitignore  Cargo.toml  Justfile  LICENSE-MIT  README.md  jreleaser.yml  rustfmt.toml
.github/workflows/: pull-request.yml  release.yml  rust.yml
data/: pems-1.snappy.parquet  pems-2.snappy.parquet  simple.parquet
pkg/brew/: pqrs-bin.rb
src/: command.rs  commands.rs  errors.rs  main.rs  utils.rs
src/commands/: cat.rs  head.rs  merge.rs  mod.rs  rowcount.rs  sample.rs  schema.rs  size.rs
tests/: integration.rs
