[package]
name = "pqrs"
version = "0.2.0"
authors = ["Manoj Karthick"]
description = "Apache Parquet command-line tools and utilities"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/manojkarthick/pqrs"
repository = "https://github.com/manojkarthick/pqrs"
keywords = ["cli", "arrow", "parquet"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "1.0.30"
log = "0.4.16"
env_logger = "0.9.0"
parquet = { version = "12.0.0", features = ["cli"] }
arrow = { version = "12.0.0", features = ["chrono-tz"] }
clap = "3.1.10"
rand = "0.8.5"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
