[package]
name = "pqrs"
version = "0.3.0"
authors = ["Manoj Karthick"]
description = "Apache Parquet command-line tools and utilities"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/manojkarthick/pqrs"
repository = "https://github.com/manojkarthick/pqrs"
keywords = ["cli", "arrow", "parquet"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "1.0.30"
log = "0.4.16"
env_logger = "0.9.0"
# TODO: Update `parquet` and `arrow` to `40.0.0` when they are released
parquet = { git = "https://github.com/apache/arrow-rs.git", rev = "0e9bdd651fffff155f6c38be692e4242d7f58577", features = ["cli"] }
arrow = { git = "https://github.com/apache/arrow-rs.git", rev = "0e9bdd651fffff155f6c38be692e4242d7f58577", features = ["chrono-tz"] }
clap = { version = "4.2.7", features = ["derive"] }
rand = "0.8.5"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
